; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/carl9170/extr_cmd.c_carl9170_powersave.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/ath/carl9170/extr_cmd.c_carl9170_powersave.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ar9170 = type { i32 }
%struct.carl9170_cmd = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@CARL9170_CMD_PSM_ASYNC = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@CARL9170_PSM_SLEEP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @carl9170_powersave(%struct.ar9170* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ar9170*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.carl9170_cmd*, align 8
  %7 = alloca i32, align 4
  store %struct.ar9170* %0, %struct.ar9170** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.ar9170*, %struct.ar9170** %4, align 8
  %9 = load i32, i32* @CARL9170_CMD_PSM_ASYNC, align 4
  %10 = call %struct.carl9170_cmd* @carl9170_cmd_buf(%struct.ar9170* %8, i32 %9, i32 4)
  store %struct.carl9170_cmd* %10, %struct.carl9170_cmd** %6, align 8
  %11 = load %struct.carl9170_cmd*, %struct.carl9170_cmd** %6, align 8
  %12 = icmp ne %struct.carl9170_cmd* %11, null
  br i1 %12, label %16, label %13

13:                                               ; preds = %2
  %14 = load i32, i32* @ENOMEM, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %3, align 4
  br label %32

16:                                               ; preds = %2
  %17 = load i32, i32* %5, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %16
  %20 = load i32, i32* @CARL9170_PSM_SLEEP, align 4
  %21 = or i32 %20, 1
  store i32 %21, i32* %7, align 4
  br label %23

22:                                               ; preds = %16
  store i32 1, i32* %7, align 4
  br label %23

23:                                               ; preds = %22, %19
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @cpu_to_le32(i32 %24)
  %26 = load %struct.carl9170_cmd*, %struct.carl9170_cmd** %6, align 8
  %27 = getelementptr inbounds %struct.carl9170_cmd, %struct.carl9170_cmd* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  store i32 %25, i32* %28, align 4
  %29 = load %struct.ar9170*, %struct.ar9170** %4, align 8
  %30 = load %struct.carl9170_cmd*, %struct.carl9170_cmd** %6, align 8
  %31 = call i32 @__carl9170_exec_cmd(%struct.ar9170* %29, %struct.carl9170_cmd* %30, i32 1)
  store i32 %31, i32* %3, align 4
  br label %32

32:                                               ; preds = %23, %13
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local %struct.carl9170_cmd* @carl9170_cmd_buf(%struct.ar9170*, i32, i32) #1

declare dso_local i32 @cpu_to_le32(i32) #1

declare dso_local i32 @__carl9170_exec_cmd(%struct.ar9170*, %struct.carl9170_cmd*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
